--- a/DEHPMatlab.Tests/DEHPMatlab.Tests.csproj
+++ b/DEHPMatlab.Tests/DEHPMatlab.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 	  <TargetFramework>net472</TargetFramework>
@@ -29,6 +29,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DEHPMatlab\DEHPMatlab.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\GNC_Lab4.m">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
