--- a/DEHPMatlab/DEHPMatlab.csproj
+++ b/DEHPMatlab/DEHPMatlab.csproj
@@ -22,18 +22,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <COMReference Include="MLApp">
-      <WrapperTool>tlbimp</WrapperTool>
-      <VersionMinor>0</VersionMinor>
-      <VersionMajor>1</VersionMajor>
-      <Guid>c36e46ab-6a81-457b-9f91-a7719a06287f</Guid>
-      <Lcid>0</Lcid>
-      <Isolated>false</Isolated>
-      <EmbedInteropTypes>true</EmbedInteropTypes>
-    </COMReference>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="DEHPCommon" Version="1.0.236" />
     <PackageReference Include="IndexRange" Version="1.0.0" />
     <PackageReference Include="NLog" Version="4.6.8" />
@@ -46,6 +34,9 @@
   <ItemGroup>
     <Reference Include="MatlabCodeParser">
       <HintPath>..\lib\MatlabCodeParser.dll</HintPath>
+    </Reference>
+    <Reference Include="matlabcom">
+      <HintPath>..\lib\matlabcom.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
   </ItemGroup>
